# ukkonen

./: .gitignore  MANIFEST.in  README.md  _ukkonen.cpp  azure-pipelines.yml  setup.cfg  setup.py  ukkonen.py  ukkonen_build.py
.github/workflows/: main.yml
tests/: ukkonen_test.py
ukkonen/: __init__.py  _ukkonen.h
ukkonen-stubs/: __init__.pyi
