[metadata]
name = ukkonen
version = 1.0.1
description = Implementation of bounded Levenshtein distance (Ukkonen)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/asottile/ukkonen
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files =
    LICENSE
    licenses/LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = ukkonen
install_requires =
    cffi>=1
python_requires = >=3.9
setup_requires =
    cffi>=1

[coverage:run]
plugins = covdefaults
omit = ukkonen_build.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
